# Atulya-Tantra

./: .dockerignore  .env.example  .gitignore  .pr_body.md  .pre-commit-config.yaml  ALL_FUNCTIONS_WORKING_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCED_WEBUI_SUMMARY.md  ERROR_FIXES_AND_TESTING_SUMMARY.md  ERROR_REPORT.md  EVALUATION.md  FINAL_CLEANUP_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.bat  INSTALLATION.md  INSTALL_GUIDE.md  ISSUES_RESOLVED.md  JARVIS_FEATURES.md  JARVIS_SYSTEM_SUMMARY.md  LICENSE  LLM_INTEGRATION.md  OPTIMIZATION_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PRODUCTION.md  PROGRESS.md  PROJECT_INFO.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.txt  (+98 more)
.github/: metadata.json  settings.json
Core/: __init__.py  agi_core.py  assistant_core.py  unified_agi_system.py
Scripts/: run-demo.ps1  tantra_cli.ps1
Test/: test_agi_system.py  test_api_auth.py  test_api_features.py  test_auth_system.py  test_capabilities.py  test_comprehensive_system.py  test_context.py  test_jarvis_features.py  test_llm_providers.py  test_multi_agent_system.py  test_skynet_features.py
Tools/: __init__.py  files.py  github.py  tantra_tools.py  weather.py  web.py
Webui/: index.html
agents/: __init__.py  agent_orchestrator.py
alembic/: env.py
artifacts/: response.md
assets/: README.md
atulya/: __init__.py  cli.py  config.py  dashboard.py  dashboard_ui.html  heartbeat.py  identity.py  intelligence.py  llm.py  local_provider.py  persona.py  production_readiness.py  soul.py
atulya_core/: __init__.py
atulya_tantra/: __init__.py  base_model.py  config_loader.py  constants.py  conversation_manager.py  core.py  mcp_client.py  memory.py  memory_extractor.py  text_ai.py  tools.py  utils.py  voice_input.py  voice_output.py
automation/: __init__.py  agent_orchestrator.py
clients/: __init__.py
colab_distributed/: .monitor_state.json  RCLONE_AUTH.md  README.md  demo_speed.py  deploy.py  merge.py  monitor.py  setup_rclone_drive.ps1  setup_rclone_multi_accounts.ps1  sync.py  train.ipynb
colab_selfcontained/: train_npdna.ipynb
config/: agent_config.json  atulya_config.yaml  config.yaml  logstash.conf  mcp_servers.json  nginx.conf  prometheus.yml  settings.py
configuration/: __init__.py  config.yaml  prompts.py  protocol_configs.py  settings.py  unified_config.py
core/: __init__.py  action_ledger.py  agents.py  automation.py  base.py  brain.py  config.py  context_aware_suggester.py  context_engine.py  critic.py  dashboard.py  engine.py  event_bus.py  exceptions.py  executor.py  finetuner.py  goals.py  governance.py  governor.py  interpreter.py  logger.py  logic.py  memory.py  memory_manager.py  models.py  monitoring.py  perception.py  planner.py  rwkv.py  sensors.py  shadow_suggestions.py  utils.py  version.py  voice.py  web_server.py
dashboard/: index.html
data/: tokenizer.json  training_data.jsonl
database/: __init__.py  models.py
demos/: final_jarvis_demo.py  simple_working_demo.py
deploy/: Dockerfile  docker-compose.yml
docs/: ADR_INDEX.md  AGI_L5_GAP_REPORT.md  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  IMPLEMENTATION_GUIDE.md  PROJECT_MAP.md  README.md  SECURITY_MODEL.md  WEBUI_RECOMMENDATIONS.md  getting-started.md  google_mcp_oauth.md  implementation_plan.md  phase_j1_progress.md  task_history.md  walkthrough.md
drishti/: __init__.py  app.py  index.html  package-lock.json  package.json  run_https.py  vite.config.js
experiments/: verify_e2_cycles.py  verify_presence_simulation.py
input/: goal.txt
internal/: simulator.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  secrets.yaml  service.yaml
mcp/: README.md
memory/: __init__.py  action_ledger.json  activity_log.json  goals.json  (+18 more)
(+808 files in other folders)
