[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atulya-tantra"
version = "0.3.0"
description = "Atulya Tantra - AI that grows with you. NP-DNA neural core, self-improving cycle, automation, and memory."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Atulya AI"}]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "psutil>=5.9",
    "cryptography>=42.0",
    "croniter>=2.0",
]

[project.optional-dependencies]
serve = ["fastapi", "uvicorn", "jinja2", "python-multipart"]
dev = ["pytest>=7.0", "ruff"]
chakra = ["GitPython>=3.1"]
yantra = ["scapy", "zeroconf", "broadlink"]
all = [
    "fastapi", "uvicorn", "jinja2", "python-multipart",
    "GitPython>=3.1",
    "scapy", "zeroconf", "broadlink",
]

[project.scripts]
atulya = "atulya.cli:main"

[tool.setuptools.packages.find]
include = ["atulya*", "tantra*", "yantra*", "webui*", "memory*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
